<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HB钱包测试</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">我的钱包</string>
    <string name="balance">查询余额</string>
    <string name="record">交易明细</string>
    <string name="appletinfo">应用信息</string>
    <string name="trade">充值</string>
    <string name="title_activity_recharge">充值</string>
	<string name="currBalance">当前余额：</string>
    <string name="rechargemoney">充值金额(整数元)：</string>
</resources>
