<!-- <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hengbao.tsm.MainActivity"
    tools:ignore="MergeRootFrame" /> -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="0dp"
    android:layout_gravity="right|bottom"
    android:layout_marginBottom="0dp"
    android:orientation="horizontal"
    tools:context=".MainActivity" >
    
     <GridLayout
	        
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:columnCount="1"
	        android:rowCount="5" 
	        android:background="@color/black">
        
        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_marginTop="0dp"
            android:layout_row="0"
            android:columnCount="1" 
            android:background="@color/black">
        <TextView
            android:id="@+id/textView1"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="8dp"
            android:layout_row="0"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
<!--                    android:textColor="@android:color/holo_blue_light"  -->
        </GridLayout>
        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_marginTop="0dp"
            android:layout_row="1"
            android:columnCount="2" 
            android:background="@color/black">
<!-- 
            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_column="1"     
                android:layout_gravity="left|top"
                android:layout_marginLeft="10dp"
                android:layout_row="0"
                android:background="@color/black"
                android:src="@drawable/ic_white_moremenu" />

            <Button
                android:id="@+id/connect"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_column="1"
                android:layout_gravity="right|top"
                android:layout_marginRight="15dp"
                android:layout_row="0"
                android:background="@drawable/ic_disabled" />
 -->
        </GridLayout>

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|bottom"
            android:layout_row="4"
            android:background="@color/black"
            android:columnCount="2"
            android:paddingBottom="0dp" >

            <ImageButton
                android:id="@+id/backward"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginLeft="30dp"
                android:layout_row="0"
                android:background="@color/black"
                android:src="@drawable/ic_white_black" />

            <ImageButton
                android:id="@+id/setmenu"
                android:layout_column="1"
                android:layout_gravity="right|top"
                android:layout_marginRight="30dp"
                android:layout_row="0"
                android:background="#000000"
                android:src="@drawable/ic_white_other" />
        </GridLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutN"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:padding="0dp"
            android:layout_row="3" >

            <LinearLayout
                android:id="@+id/LinearLayout1"
               	android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:orientation="vertical"
                android:padding="0dp"
                android:paddingTop="0dp" >
<!--  android:layout_width="180dp" -->
               <Button
                    android:id="@+id/trade"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="4.5"
                    android:background="#c572c9"
                    android:text="@string/trade"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/record"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="4.5"
                    android:background="#99ccff"
                    android:text="@string/record" 
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout2"
               android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:orientation="vertical" >
<!--  android:layout_width="180dp" -->
				<Button
				    android:id="@+id/balance"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginLeft="0dp"
				    android:layout_weight="4.5"
				    android:paddingTop="0dp"
				    android:background="#99ff99"
				    android:text="@string/balance"
				    android:textColor="@color/black" />

                <Button
                    android:id="@+id/appletinfo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="4.5"
                    android:background="#ffff99"
                    android:text="@string/appletinfo"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

    </GridLayout>
		
    
</RelativeLayout>
